[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common_util"
version = "0.0.1"
authors = [
    { name="Puffy Codes", email="as1234dfgh@gmail.com" },
]
description = "Common Utility for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/puffycodes/common-utility"
Issues = "https://github.com/puffycodes/common-utility/docs/known_issue.md"
