[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
#name = "puffy_common_util"
name = "common_util"
version = "0.0.1"
authors = [
    { name="Puffy Codes", email="as1234dfgh@gmail.com" },
]
description = "Common Utility for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["common_util", "tools"]

[tool.hatch.build.targets.wheel.sources]
"tools" = "common_util/tools"

[project.scripts]
hexdump = "common_util.hexdump:HexDump.main"
list_duplicate_files = "common_util.tools.list_duplicate_files:main"

[project.urls]
Homepage = "https://github.com/puffycodes/common-utility"
Issues = "https://github.com/puffycodes/common-utility/docs/known_issue.md"
